# dev-tracker

./: .env.example  .gitignore  README.md  api_client.py  auth.py  config.py  main.py  pr_tracker.py  pyproject.toml
.github/workflows/: auto-release.yaml  pre-release.yaml  release.yaml
src/dev_tracker/: __init__.py  __main__.py  api_client.py  auth.py  cli.py  multiple_project_tracker.py  pr_tracker.py  project_tracker.py  threading_utils.py  v.json
src/dev_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dev_tracker/azure_devops/: git_client.py  local_repo_cache.py
