[project]
name = "dev-tracker"
description = "Azure DevOps PR and release tracking CLI"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
dev-tracker = "dev_tracker.cli:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]